category all & getall, getone and create Table
